# parallel-computation

./: calc_pi.cc  comm_time.cc  conv_diff.cc  meson.build
